--- a/user.yml
+++ b/user.yml
@@ -52,6 +52,7 @@ check_otp:
     - sql_values: select lpad(floor(rand()*9999),4,'0') server_otp, now() time_of_otp
     - write_session: server_otp,time_of_otp
     - read_session: email,first_name,last_name,cellphone
+    - read_config: sms_otp,email_otp
     - if $sms_otp:
         sms.send: { type: otp_sms }
     - if $email_otp:
@@ -350,7 +351,7 @@ login:
     - login
     - forgot_password: { action: dialog }
   post:
-    - collection.values: [user, email: $email, user: identifier, partner, first_name, last_name, cellphone, start_page, role, attempts ]
+    - collection.values: [user, [email], user: identifier, partner, first_name, last_name, cellphone, start_page, role, attempts ]
     - if "$start_page" == '':
         - collection.values: [partner, $partner, start_page]
     - if "$start_page" == '': [ read_config: start_page ]
