started integrating payweb v3

--- a/app-config.yml
+++ b/app-config.yml
@@ -33,8 +33,10 @@ modules:
 search_paths: [../common/,.,$brand_path]
 collections:
   default: collection
-  session: [session,audit]
   auth: [user,partner,role,user_role,user_group,user_group_member]
+  session: [session,audit]
+  billing: [rate,payment,credit,transaction]
+
 
 registrar: Mukoni Software
 registrar_role: admin
@@ -63,3 +65,7 @@ emailer.send:
     host: smtp.example.com
     user: me@example.com
     password: mypassword
+
+paygate_id: 10011072130
+paygate_secret: secret
+paygate_url: https://secure.paygate.co.za/payweb3/initiate.trans
