--- a/datatable.yml
+++ b/datatable.yml
@@ -6,6 +6,12 @@ datatable:
   create: datatable
   body:
     class: [table-body]
+  row_actions: []
+  row_styles: {}
+  row:
+    actions: []
+    styles: {}
+    class: [table-row,relative]
   script: [/common/datatable.js]
   row_creator: { type: table_row }
   css: [/common/datatable.css,/datatable.css]
