audit starting of paygate transaction

--- a/paygate.yml
+++ b/paygate.yml
@@ -43,6 +43,9 @@ request:
     - sql_values: >
         select md5('$PAYGATE_ID|$REFERENCE|$AMOUNT|$CURRENCY|$RETURN_URL|$TRANSACTION_DATE|$EMAIL|$SECRET') CHECKSUM
     - trigger: .submit
+    - audit:
+        action: Start Electronic Transaction
+        detail: "Amount: $AMOUNT Reference: $REFERENCE"
     - keep_values: [PAYGATE_ID,REFERENCE,AMOUNT,CURRENCY,RETURN_URL,TRANSACTION_DATE,EMAIL,CHECKSUM]
 
 response:
