--- a/paygate.yml
+++ b/paygate.yml
@@ -4,6 +4,7 @@ payweb:
   type: iframe
   src: /?page=paygate/request
   modal:
+    close_button: ""
     dialog:
       class: [col s12 m10 l9]
 
@@ -26,18 +27,18 @@ request:
     - CHECKSUM
   values:
     - read_session: [paygate_amount]
-    - collection.values: [session, $sid, partner, partner.currency, user, user.email]
-    - collection.insert: [payment, "", partner, user, amount: $paygate_amount, status: pending, method: credit_card ]
+    - collection.values: [session, $sid, partner, partner.currency, user, user.email, start_time: /now()]
+    - collection.insert: [payment, "", partner, user, session: $sid, amount: $paygate_amount, status: pending, method: credit_card, start_time]
     - read_config: [paygate_id,paygate_secret]
     - if "$currency" == '': { read_config: currency }
     - read_server: [BASE_URL]
-    - sql_values: select now() TRANSACTION_DATE
     - let:
         PAYGATE_ID: $paygate_id
         REFERENCE: $new_payment_id
         AMOUNT: $paygate_amount
         CURRENCY: $currency
         RETURN_URL: $BASE_URL?page=paygate/response
+        TRANSACTION_DATE: $start_time
         EMAIL: $email
         SECRET: $paygate_secret
     - sql_values: >
@@ -51,10 +52,9 @@ request:
 response:
   type: input_page
   name: Complete Electronic Payment
-  desc: >
-    This the the result of the Paygate process:
+  desc: Payment Result
   inputs:
-    - type: info_text
+    - type: filled_text
     - amount
     - status
     - result_description
@@ -62,29 +62,37 @@ response:
     - reference
   values:
     - read_session
-    - sql_values: select round($paygate_amount/100,2) amount, if ('$status'='appr','Success', 'Failed') status
+    - sql_values: select round($paygate_amount/100,2) amount, if ('$payment_status'='approved','Success', 'Failed') status
     - let:
         result_description: $paygate_result
         authorisation_code: $paygate_auth_code
         reference: $paygate_trx_id
-    - clear_session: [paygate_amount, paygate_status, paygate_result, paygate_auth_code, paygate_trx_id]
+    - clear_session: [paygate_status, paygate_result, paygate_auth_code, paygate_trx_id]
+    - trigger: [show,"#page [action=result_$payment_status]", true]
   read:
+    - read_config: paygate_secret
     - sql_values: >
         select md5("$PAYGATE_ID|$REFERENCE|$TRANSACTION_STATUS|$RESULT_CODE|$AUTH_CODE|$AMOUNT|$RESULT_DESC|$TRANSACTION_ID|$RISK_INDICATOR|$paygate_secret") calc_checksum
-    - sql_values: select if('$TRANSACTION_STATUS'='1' and '$calc_checksum' = '$CHECKSUM', 'appr', 'reje') status
+    - sql_values: select if('$TRANSACTION_STATUS'='1' and '$calc_checksum' = '$CHECKSUM', 'approved', 'failed') payment_status
     - write_session:
         - paygate_status: $TRANSACTION_STATUS
         - paygate_result: $RESULT_DESC
         - paygate_auth_code: $AUTH_CODE
         - paygate_trx_id: $TRANSACTION_ID
         - paygate_amount: $AMOUNT
-        - status
-    - sql_values: select id payment_id, payer_id partner_id from payment where id = '$REFERENCE'
-    - sql_update: [payment, id: $REFERENCE, status, reference1: $TRANSACTION_ID, reference2: $AUTH_CODE ]
-    - sql_insert:
-        - audit_trail
-        - partner: $partner_id
-        - user: $uid
-        - action: Complete Electronic Payment
-        - detail: >
-            Transaction ID: $TRANSACTION_ID Auth Code: $AUTH_CODE Amount: $AMOUNT Result: $RESULT_DESC
+        - payment_status
+    - collection.update: [payment, $REFERENCE, partner, status, reference1: $TRANSACTION_ID, reference2: $AUTH_CODE, end_time: /now() ]
+    - audit:
+        action: Complete Electronic Payment
+        detail: "Transaction ID: $TRANSACTION_ID Auth Code: $AUTH_CODE Amount: $AMOUNT Result: $RESULT_DESC"
+  actions:
+    - result_approved: { show: no}
+    - result_failed: { show: no}
+
+result_approved:
+  name: Close
+
+result_failed:
+  name: Try Again
+  post:
+    - redirect: /?page=paygate/response
