--- a/paygate.yml
+++ b/paygate.yml
@@ -4,7 +4,6 @@ payweb:
   type: iframe
   src: /?page=paygate/request
   modal:
-    close_button: ""
     dialog:
       class: [col s12 m10 l9]
 
@@ -27,7 +26,7 @@ request:
     - CHECKSUM
   values:
     - read_session: [paygate_amount]
-    - collection.values: [session, $sid, partner, partner.currency, user, user.email, start_time: /now()]
+    - collection.values: [session, $sid, partner, partner.currency, user, user.email, start_time: /now(), paygate_amount: /round($paygate_amount)]
     - collection.insert: [payment, "", partner, user, session: $sid, amount: $paygate_amount, status: pending, method: credit_card, start_time]
     - read_config: [paygate_id,paygate_secret]
     - if "$currency" == '': { read_config: currency }
