--- a/paygate.yml
+++ b/paygate.yml
@@ -4,7 +4,6 @@ payweb:
   type: iframe
   src: /?page=paygate/request
   modal:
-    close_button: ""
     dialog:
       class: [col s12 m10 l9]
 
@@ -29,6 +28,7 @@ request:
     - read_session: [paygate_amount]
     - collection.values: [session, $sid, partner, partner.currency, user, user.email, start_time: /now()]
     - collection.insert: [payment, "", partner, user, session: $sid, amount: $paygate_amount, status: pending, method: credit_card, start_time]
+    - write_session: [new_payment_id]
     - read_config: [paygate_id,paygate_secret]
     - if "$currency" == '': { read_config: currency }
     - read_server: [BASE_URL]
@@ -51,48 +51,24 @@ request:
 
 response:
   type: input_page
-  name: Complete Electronic Payment
-  desc: Payment Result
   inputs:
-    - type: filled_text
-    - amount
     - status
-    - result_description
-    - authorisation_code
-    - reference
   values:
-    - read_session
-    - sql_values: select round($paygate_amount/100,2) amount, if ('$payment_status'='approved','Success', 'Failed') status
-    - let:
-        result_description: $paygate_result
-        authorisation_code: $paygate_auth_code
-        reference: $paygate_trx_id
-    - clear_session: [paygate_status, paygate_result, paygate_auth_code, paygate_trx_id]
-    - trigger: [show,"#page [action=result_$payment_status]", true]
-  read:
     - read_config: paygate_secret
     - sql_values: >
         select md5("$PAYGATE_ID|$REFERENCE|$TRANSACTION_STATUS|$RESULT_CODE|$AUTH_CODE|$AMOUNT|$RESULT_DESC|$TRANSACTION_ID|$RISK_INDICATOR|$paygate_secret") calc_checksum
-    - sql_values: select if('$TRANSACTION_STATUS'='1' and '$calc_checksum' = '$CHECKSUM', 'approved', 'failed') payment_status
-    - write_session:
-        - paygate_status: $TRANSACTION_STATUS
-        - paygate_result: $RESULT_DESC
-        - paygate_auth_code: $AUTH_CODE
-        - paygate_trx_id: $TRANSACTION_ID
-        - paygate_amount: $AMOUNT
-        - payment_status
-    - collection.update: [payment, $REFERENCE, partner, status, reference1: $TRANSACTION_ID, reference2: $AUTH_CODE, end_time: /now() ]
+    - sql_values: select if('$TRANSACTION_STATUS'='1' and '$calc_checksum' = '$CHECKSUM', 'approved', 'failed') status
+    - collection.update:
+        - payment
+        - $REFERENCE
+        - partner
+        - status
+        - status_reason: $RESULT_DESC
+        - reference1: $TRANSACTION_ID
+        - authorisation_code: $AUTH_CODE
+        - end_time: /now()
     - audit:
         action: Complete Electronic Payment
         detail: "Transaction ID: $TRANSACTION_ID Auth Code: $AUTH_CODE Amount: $AMOUNT Result: $RESULT_DESC"
-  actions:
-    - result_approved: { show: no}
-    - result_failed: { show: no}
-
-result_approved:
-  name: Close
-
-result_failed:
-  name: Try Again
-  post:
-    - redirect: /?page=paygate/response
+    - read_session: paygate_handler
+    - trigger: [paygate_$status, $paygate_handler]
