added default navigation content and removed styling class info on navigator

--- a/navigator.yml
+++ b/navigator.yml
@@ -7,15 +7,12 @@ navigator:
     type: container
     derive: [name,heading, brief, items,item]
     contents: $items
-    class: [col s12 m2 l2,whitesmoke, pad pad-tiny]
   heading:
     tag: div
     name: $parent_name
-    class: [bold, pad-y pad-medium]
 
   brief:
     tag: p
-    class: [italic, font-tiny, pad-y pad-large]
     name: ""
   items:
     - $heading
@@ -25,10 +22,10 @@ navigator:
     tag: div
     action: redirect
     url: /$id
-    target: ".navigation-target>*"
-    class: [pointer-cursor, pad-y pad-tiny]
+    target: .navigation-target>*
     immutable: [url]
   target_container:
     type: container
-    class: [navigation-target, col s12 m10 l10]
-    contents: [blank  ]
+    class: [navigation-target]
+    derive: [default]
+    contents: [$default]
