set default item on navigator to load from as sub page

--- a/navigator.yml
+++ b/navigator.yml
@@ -21,6 +21,7 @@ navigator:
     url: $base_url/$id
     target: .navigation-target>*
     immutable: [url]
+  default: { sub_page: true }
   target_container:
     type: container
     class: [navigation-target]
