--- a/user.yml
+++ b/user.yml
@@ -173,6 +173,7 @@ create:
 deactivate:
   access: [admin]
   validate: none
+  confirmation: yes
   desc: Deactivate this user
   audit: $first_name $last_name ($email)
   post:
