--- a/user.yml
+++ b/user.yml
@@ -178,6 +178,7 @@ deactivate:
   post:
     - collection.values: [session, $sid, user]
     - if $key == $user:
+        - clear_values
         - abort: You can't deactivate current user
     - collection.update: [user, $key, active: 0]
     - collection.values: [user, $key, first_name, last_name, email]
