--- a/user.yml
+++ b/user.yml
@@ -107,6 +107,7 @@ confirm_registration:
     - read_session: title,first_name,last_name,cellphone,email
   validate: agree_terms
   post:
+    - read_config: [registrant_partner, registrant_role]
     - read_session: title,first_name,last_name,cellphone,email,password,registrant_partner
     - collection.values: [partner, name: $registrant_partner, partner: identifier]
     - if $parter == '':
