--- a/audit_trail.yml
+++ b/audit_trail.yml
@@ -43,6 +43,8 @@ partner:
 
 system:
   name: System Audit Trail
+  class: [widest,scroll-table]
+  body: { max-height: 400 }
   type: partner
   access: [admin]
   fields:
