disallowed int_tel validation to accept space/s between digits

--- a/validators.yml
+++ b/validators.yml
@@ -118,9 +118,9 @@ in_collection:
 
 int_tel:
   valid:
-    - /^\+\d+[- \d]*$/
+    - /^\+\d+[-\d]*$/
     - at_least(10,digits)
-  error: Please use international number format for $name, e.g. +27823456789
+  error: Please use international number format without space/s in betweeen for $name, e.g. +27823456789
 
 is: must_be($1)
 
