--- a/paygate.yml
+++ b/paygate.yml
@@ -27,7 +27,7 @@ request:
   values:
     - read_session: [paygate_amount]
     - collection.values: [session, $sid, partner, partner.currency, user, user.email, start_time: /now(), paygate_amount: /round($paygate_amount)]
-    - collection.insert: [payment, "", partner, user, session: $sid, amount: $paygate_amount, status: pending, method: credit_card, start_time]
+    - collection.insert: [payment, "", partner, user, session: $sid, amount: $paygate_amount, status: pending, payment_method: credit_card, start_time]
     - write_session: [new_payment_id]
     - read_config: [paygate_id,paygate_secret]
     - if "$currency" == '': { read_config: currency }
