--- a/user.yml
+++ b/user.yml
@@ -105,6 +105,7 @@ confirm_registration:
     - agree_terms: { template: question_input, type: checkbox}
   values:
     - read_session: title,first_name,last_name,cellphone,email
+    - collection.values: [title, $title, title: name]
   validate: agree_terms
   post:
     - read_config: [registrant_partner, registrant_role]
