--- a/validators.yml
+++ b/validators.yml
@@ -42,7 +42,8 @@ collection_filter:
   valid: sql(select value$4 from collection where collection = '$1' and identifier = '$2' and attribute = '$3')
 
 collection_unique:
-  valid: not(in_collection($1))
+  valid: collection.unique($1,$2,$value)
+  error: $name already exists
 
 contains_at_least:
   valid: /$1/s
