implemented partner access rights

--- a/user.yml
+++ b/user.yml
@@ -365,17 +365,17 @@ login:
     - login
     - forgot_password: { action: dialog }
   post:
-    - collection.values: [user, [email], user: identifier, partner, first_name, last_name, cellphone, start_page, role, attempts ]
+    - collection.values: [user, [email], user: identifier, partner, first_name, last_name, cellphone, start_page, role, attempts, partner.type ]
     - if "$start_page" == '':
         - collection.values: [partner, $partner, start_page]
     - if "$start_page" == '': [ read_config: start_page ]
-    - collection.listing: [role, $role, base_roles: role]
+    - collection.values: [role, $role, base_roles: role]
     - collection.listing: [user_group_member, [user: $user], groups: group]
     - if $attempts > 0:
         - collection.update: [user, user, attempts: 0]
     - read_server: [HTTP_USER_AGENT,REMOTE_ADDR,REMOTE_HOST,REQUEST_URI]
     - collection.insert: [session, /sha1(last_insert_id()), user, partner, start_time: /now(), HTTP_USER_AGENT, REMOTE_ADDR,REQUEST_URI]
-    - auth.login: [$new_session_id, user, $role, $base_roles, $groups]
+    - auth.login: [$new_session_id, user, $role, $base_roles, $groups, $type]
     - close_dialog
     - redirect: $start_page
   audit:
