--- a/user.yml
+++ b/user.yml
@@ -48,9 +48,11 @@ check_otp:
     Please make sure you enter this OTP instead of the first one.
   inputs:
     - otp
+  pre_validation:
+    - read_session: [server_otp,time_of_otp]
   values:
     - sql_values: select lpad(floor(rand()*9999),4,'0') server_otp, now() time_of_otp
-    - write_session: server_otp,time_of_otp
+    - write_session: [server_otp,time_of_otp]
     - read_session: email,first_name,last_name,cellphone
     - read_config: sms_otp,email_otp
     - if $sms_otp:
