--- a/user.yml
+++ b/user.yml
@@ -25,7 +25,39 @@ activate_email:
 
 
 activate_self:
+  type: wizard
+  name: Activate Account
+  modal:
+    dialog:
+      position: { my: 'top', at: 'top+10' }
+      class: [col s12 m8 l7 ]
+  access: public
+  read:
+    - read_session: token
+    - collection.values: [token,$token,user.cellphone,user.email,user.first_name,user.last_name]
+    - write_session: [cellphone,email,first_name,last_name]
+  steps:
+    - check_otp
+    - activate_password
+    - login
+
+activate_password:
   type: input_page
+  desc: Please enter your desired password and type it again to confirm it.
+  inputs:
+    - type: password_input
+    - password
+    - confirm_password
+  post:
+    - read_session: token
+    - collection.values: [token, $token, user]
+    - collection.update: [user, $user, password: /password('$password'), attempts: 0, active: 1]
+    - clear_values
+    - alert: Your account has been activated successfully
+  audit:
+    name: Activate acount
+    detail: $email
+
 
 change_password:
   type: wizard
@@ -183,7 +215,7 @@ create:
     - create
   post:
     - collection.values: [session,$sid,partner,user,company_name: partner.name, creator_first_name: user.first_name, creator_last_name: user.last_name]
-    - collection.insert: [user,"",email,password: /password('$password'),active: 1,user_group: $group,attempts: 0,tittle,first_name,last_name,cellphone,country,role,partner,time_added: /now()]
+    - collection.insert: [user,"",email,password: /password('$password'),active: 0,user_group: $group,attempts: 0,tittle,first_name,last_name,cellphone,country,role,partner,time_added: /now()]
     - collection.insert:
         - audit
         - ""
@@ -192,8 +224,8 @@ create:
         - user: $new_user_id
         - detail: $title $first_name $last_name $cellphone $email
     - read_config: [self_activation_validity,program_name]
-    - let: { url: /user/activate_self}
-    - collection.insert: [token, /md5(last_insert_id()), user: $new_user_id, url,valid_until: /sysdate() + interval $self_activation_validity]
+    - let: { url: /user/activate_self, method: show_dialog }
+    - collection.insert: [token, /md5(last_insert_id()), user: $new_user_id, url, method, valid_until: /sysdate() + interval $self_activation_validity]
     - read_server: BASE_URL
     - sql_values: select "$BASE_URL/home?token=$new_token_id" user_activation_link
     - emailer.send: {type: create_user_email}
